[package]

name = "redlock"
version = "1.3.0"
authors = ["hxuchen IronC <apehuang123@gmail.com>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis"

homepage = "https://github.com/hxuchen/redlock-rs"
repository = "https://github.com/hxuchen/redlock-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[dependencies]
redis = "0.21.0"
rand = "0.8.3"
tokio = { version = "1.7.1", features = ["rt"], optional = true }

[features]
default = []
async = ["tokio"]
tls = ["redis/tls"]

[dev-dependencies]
testcontainers = "0.14.0"
once_cell = "1.7.2"
anyhow = "1.0.40"
