[package]

name = "redislock"
version = "1.3.0"
authors = ["hxuchen IronC <apehuang123@gmail.com>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis"

homepage = "https://github.com/hxuchen/redislock"
repository = "https://github.com/hxuchen/redislock"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[dependencies]
redis = "0.26.1"
rand = "0.8.5"
tokio = { version = "1.39.2", features = ["rt"], optional = true }

[features]
default = []
async = ["tokio"]
tls = ["redis/tls"]

[dev-dependencies]
once_cell = "1.19.0"
anyhow = "1.0.86"
